# plotart

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
blobs/: blobs.py  main.py
examples/: RectPackedStreamlines.ipynb  helper.py  run_command  streamline_letter.py
plotart/: __init__.py
plotart/blobs/: blobs.py
plotart/brush/: brush.py
plotart/rectangles/: rect.py
plotart/streamlines/: PotentialField.py  streamline_gui.py  streamlines.py  streamlines_gpt4.py  streamlines_gpt5.py  streamlines_imp.py  streamlinesgpt.py  test.ipynb  test.json
streamlines/: main.py  streamlines.py
